--- a/package.xml
+++ b/package.xml
@@ -6,7 +6,7 @@
 
     <maintainer email="valentinwueest@gmail.com">Valentin Wueest</maintainer>
 
-    <license>GNU-GPL</license>
+    <license>GPL-3.0</license>
 
     <author>Valentin Wueest</author>
 
