--- a/config/quad_params.yaml
+++ b/config/quad_params.yaml
@@ -55,10 +55,10 @@ R_BI: [ 1.0, 0.0, 0.0, 0.0, -1.0, 0.0, 0.0, 0.0, -1.0]
 # rotor properties
 multirotor:
     rotor1: # have only as many "rotor(i)" as there are on the multirotor
-        kf: 4.179e-9 # Unit: [N/rpm^2]
-        km: 3.97005e-11 # positive if counter-clockwise, negative if clockwise
-        R: [ 1.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 1.0] # R (row major)
-        t: [ 0.071, 0.08, 0.0]
+        kf: 4.179e-9 # rotor thrust coefficient - Unit: [N/rpm^2]
+        km: 3.97005e-11 # rotor drag moment coefficient - positive if counter-clockwise, negative if clockwise
+        R: [ 1.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 1.0] # rotor attitude - row major matrix
+        t: [ 0.071, 0.08, 0.0] # rotor position
     rotor2:
         kf: 4.179e-9
         km: -3.97005e-11
